// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly with children 1`] = `
<header>
  <nav
    className="sc-gsTCUz bgBJwL"
  >
    <div
      className="sc-bdfBwQ sc-dlfnbm eeiJX cMPxwz"
    >
      <div>
        This
      </div>
      <div>
        is
      </div>
      <div>
        cool
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header component should render correctly without children 1`] = `
<header>
  <nav
    className="sc-gsTCUz bgBJwL"
  >
    <div
      className="sc-bdfBwQ sc-dlfnbm eeiJX cMPxwz"
    />
  </nav>
</header>
`;
